--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 
 <body>
     <header class="header">
-        <div class="container">
-            <a href="index.html" class="logo"> <span class="blue">Web</span>Studio</a>
+        <div class="container header_container">
+            <a href="index.html" class="logo"> <span class="logo__color1">Web</span>Studio</a>
             <div>
-                <nav class="container-item1">
+                <nav class="container-item1 header__navigation">
                     <ul class="navigation">
-                        <li class="navigation-item"><a class="link active" href="index.html">Agencja</a></li>
-                        <li class="navigation-item"><a class="link" href="portfolio.html">Portfolio</a></li>
-                        <li class="navigation-item"><a class="link" href="">Kontakt</a></li>
+                        <li class="navigation__item"><a class="link active" href="index.html">Agencja</a></li>
+                        <li class="navigation__item"><a class="link" href="portfolio.html">Portfolio</a></li>
+                        <li class="navigation__item"><a class="link" href="">Kontakt</a></li>
                     </ul>
                 </nav>
             </div>
-            <div class="contact container-item1">
+            <div class="contact container-item1 header__contact">
                 <a href="mailto:info@devstudio.com" class="link mail">
                     <svg width="16px" height="12px">
                         <use href="./images/icons.svg#icon-envelope"></use>
@@ -322,7 +322,7 @@
     <footer class="footer">
         <div class="container footer-container">
             <div class="footer-left">
-            <a href="/index.html" class="logo"> <span>Web</span>Studio</a>
+            <a href="/index.html" class="logo"> <span class="logo__color1">Web</span>Studio</a>
             <address class="address footer-address">
                 m. Warszawa, Aleje Jerozolimskie 21
             </address>
