--- a/index.html
+++ b/index.html
@@ -434,15 +434,15 @@
         <div class="newsletter">
           <h5 class="smaller-title">ZAPISZ SIĘ DO NEWSLETTERA</h5>
           <form>
-            <input type="email" placeholder="E-mail" class="newsletter__input" />
+            <input
+              type="email"
+              placeholder="E-mail"
+              class="newsletter__input"
+            />
             <button type="submit" class="newsletter__button">
-              <div class="newsletter_button-inside">
+              <div class="footer-input-button-inside">
                 Zapisz się
-                <svg
-                  width="20px"
-                  height="20px"
-                  class="newsletter__button-icon"
-                >
+                <svg width="20px" height="20px" class="newsletter__button-icon">
                   <use href="./images/icons.svg#icon-send"></use>
                 </svg>
               </div>
