--- a/portfolio.html
+++ b/portfolio.html
@@ -27,12 +27,14 @@
           <nav class="header__navigation">
             <ul class="navigation">
               <li class="navigation__item">
-                <a class="header__link header__link--active" href="index.html"
-                  >Agencja</a
-                >
+                <a class="header__link" href="index.html">Agencja</a>
               </li>
               <li class="navigation__item">
-                <a class="header__link" href="portfolio.html">Portfolio</a>
+                <a
+                  class="header__link header__link--active"
+                  href="portfolio.html"
+                  >Portfolio</a
+                >
               </li>
               <li class="navigation__item">
                 <a class="header__link" href="">Kontakt</a>
