wprowadzenie css do oddzielnych plików scss

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="description" content="Główna strona projektu />
     <meta name=" viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -438,6 +438,7 @@
               type="email"
               placeholder="E-mail"
               class="newsletter__input"
+              required
             />
             <button type="submit" class="newsletter__button">
               <div class="footer-input-button-inside">
