--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -364,6 +364,7 @@
               type="email"
               placeholder="E-mail"
               class="newsletter__input"
+              required
             />
             <button type="submit" class="newsletter__button">
               <div class="newsletter_button-inside">
