--- a/index.html
+++ b/index.html
@@ -398,33 +398,33 @@
             <a class="footer__link" href="tel:+48111111111">+48 111 111 111</a>
           </address>
         </div>
-        <div class="social-footer">
+        <div class="footer__social">
           <h5 class="smaller-title">DOŁĄCZ DO NAS</h5>
-          <ul class="social-footer__links">
+          <ul class="footer__social-links">
             <li>
-              <a class="social-footer__icon" href="">
-                <svg width="20px" height="20px" class="social-links__image">
+              <a class="footer__social-icon" href="">
+                <svg width="20px" height="20px">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="social-footer__icon" href="">
-                <svg width="20px" height="20px" class="social-links__image">
+              <a class="footer__social-icon" href="">
+                <svg width="20px" height="20px">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="social-footer__icon" href="">
-                <svg width="20px" height="20px" class="social-links__image">
+              <a class="footer__social-icon" href="">
+                <svg width="20px" height="20px">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="social-footer__icon" href="">
-                <svg width="20px" height="20px" class="social-links__image">
+              <a class="footer__social-icon" href="">
+                <svg width="20px" height="20px">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
