poprawione punkty 1-4 z komentarza

--- a/index.html
+++ b/index.html
@@ -24,34 +24,31 @@
         <a href="index.html" class="logo">
           <span class="logo__color1">Web</span>Studio</a
         >
-        <div>
-          <nav class="header__navigation">
-            <ul class="navigation">
-              <li class="navigation__item">
-                <a class="header__link header__link--active" href="index.html"
-                  >Agencja</a
-                >
-              </li>
-              <li class="navigation__item">
-                <a class="header__link" href="portfolio.html">Portfolio</a>
-              </li>
-              <li class="navigation__item">
-                <a class="header__link" href="">Kontakt</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
+        <nav class="header__navigation">
+          <ul class="navigation">
+            <li class="navigation__item">
+              <a
+                class="navigation__link navigation__link--active"
+                href="index.html"
+                >Agencja</a
+              >
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="">Kontakt</a>
+            </li>
+          </ul>
+        </nav>
         <div class="contact header__contact">
-          <a
-            href="mailto:info@devstudio.com"
-            class="header__link contact__link"
-          >
+          <a href="mailto:info@devstudio.com" class="contact__link">
             <svg width="16px" height="12px" class="contact__icon">
               <use href="./images/icons.svg#icon-envelope"></use>
             </svg>
             info@devstudio.com
           </a>
-          <a href="tel:+48111111111" class="header__link contact__link">
+          <a href="tel:+48111111111" class="contact__link">
             <svg width="16px" height="12px" class="contact__icon">
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>
@@ -60,12 +57,12 @@
         </div>
       </div>
     </header>
-    <section class="advert">
+    <section class="hero">
       <div class="container">
-        <h1 class="main-title advert__item">
+        <h1 class="main-title hero__item">
           EFEKTYWNE ROZWIĄZANIA DLA BIZNESU
         </h1>
-        <button class="advert__button" type="button" data-modal-open>
+        <button class="hero__button" type="button" data-modal-open>
           Zamów usługę
         </button>
       </div>
