poprawienie pracy domowej

--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
     </header>
     <section class="hero">
       <div class="container">
-        <h1 class="main-title hero__item">
-          EFEKTYWNE ROZWIĄZANIA DLA BIZNESU
-        </h1>
+        <h1 class="section__title--main-title">EFEKTYWNE ROZWIĄZANIA DLA BIZNESU</h1>
         <button class="hero__button" type="button" data-modal-open>
           Zamów usługę
         </button>
@@ -69,51 +67,51 @@
     </section>
     <section class="advantages">
       <div class="container">
-        <ul class="list1 advantages__list">
-          <li class="feature">
+        <ul class="advantages__list">
+          <li class="advantages__item feature">
             <div class="feature__icon">
               <svg width="70px" height="70px">
                 <use href="./images/icons.svg#icon-antenna"></use>
               </svg>
             </div>
             <div class="feature__title">LOREM IPSUM</div>
-            <div class="text1-text">
+            <div>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </div>
           </li>
-          <li class="feature">
+          <li class="advantages__item feature">
             <div class="feature__icon">
               <svg width="70px" height="70px">
                 <use href="./images/icons.svg#icon-clock"></use>
               </svg>
             </div>
             <div class="feature__title">LOREM IPSUM</div>
-            <div class="text1-text">
+            <div>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </div>
           </li>
-          <li class="feature">
+          <li class="advantages__item feature">
             <div class="feature__icon">
               <svg width="70px" height="70px">
                 <use href="./images/icons.svg#icon-diagram"></use>
               </svg>
             </div>
             <div class="feature__title">LOREM IPSUM</div>
-            <div class="text1-text">
+            <div>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </div>
           </li>
-          <li class="feature">
+          <li class="advantages__item feature">
             <div class="feature__icon">
               <svg width="70px" height="70px">
                 <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
             </div>
             <div class="feature__title">LOREM IPSUM</div>
-            <div class="text1-text">
+            <div>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </div>
@@ -123,7 +121,7 @@
     </section>
     <section class="what-we-do">
       <div class="container">
-        <h2 class="title">Czym się zajmujemy</h2>
+        <h2 class="section__title">Czym się zajmujemy</h2>
         <ul class="what-we-do__list">
           <li class="what-we-do__element">
             <img
@@ -157,7 +155,7 @@
     </section>
     <section class="team">
       <div class="container team__container">
-        <h2 class="title team__title">Nasz zespół</h2>
+        <h2 class="section__title team__title">Nasz zespół</h2>
         <ul class="johns">
           <li class="johns__member">
             <figure class="johns__figure">
@@ -344,7 +342,7 @@
     </section>
     <section class="clients">
       <div class="container">
-        <h2 class="title">Nasi klienci</h2>
+        <h2 class="section__title">Nasi klienci</h2>
         <ul class="clients__list">
           <li class="clients__client">
             <svg class="clients__logo">
