--- a/portfolio.html
+++ b/portfolio.html
@@ -23,36 +23,31 @@
         <a href="index.html" class="logo">
           <span class="logo__color1">Web</span>Studio</a
         >
-        <div>
-          <nav class="header__navigation">
-            <ul class="navigation">
-              <li class="navigation__item">
-                <a class="header__link" href="index.html">Agencja</a>
-              </li>
-              <li class="navigation__item">
-                <a
-                  class="header__link header__link--active"
-                  href="portfolio.html"
-                  >Portfolio</a
-                >
-              </li>
-              <li class="navigation__item">
-                <a class="header__link" href="">Kontakt</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
+        <nav class="header__navigation">
+          <ul class="navigation">
+            <li class="navigation__item">
+              <a
+                class="navigation__link navigation__link--active"
+                href="index.html"
+                >Agencja</a
+              >
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__link" href="">Kontakt</a>
+            </li>
+          </ul>
+        </nav>
         <div class="contact header__contact">
-          <a
-            href="mailto:info@devstudio.com"
-            class="header__link contact__link"
-          >
+          <a href="mailto:info@devstudio.com" class="contact__link">
             <svg width="16px" height="12px" class="contact__icon">
               <use href="./images/icons.svg#icon-envelope"></use>
             </svg>
             info@devstudio.com
           </a>
-          <a href="tel:+48111111111" class="header__link contact__link">
+          <a href="tel:+48111111111" class="contact__link">
             <svg width="16px" height="12px" class="contact__icon">
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>
