--- a/portfolio.html
+++ b/portfolio.html
@@ -26,14 +26,14 @@
         <nav class="header__navigation">
           <ul class="navigation">
             <li class="navigation__item">
-              <a
-                class="navigation__link navigation__link--active"
-                href="index.html"
-                >Agencja</a
-              >
+              <a class="navigation__link" href="index.html">Agencja</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link" href="portfolio.html">Portfolio</a>
+              <a
+                class="navigation__link navigation__link--active"
+                href="portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="navigation__item">
               <a class="navigation__link" href="">Kontakt</a>
